# aogashima

./: README.md  clean_aogashima_data.py  fetch_aogashima_data.py  plot_wind_scatter_interactive.py  pyproject.toml  wind_regression.py
data/: aogashima_ship_arrivals.csv
docs/: index.html  wind_regression_from.html  wind_regression_to.html  wind_scatter_interactive.html
