[project]
name = "aogashima"
version = "0.1.0"
description = "Generate aggregated CSVs for Aogashima ferry operations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12",
    "plotly>=5.24",
    "scikit-learn>=1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
